--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -168,7 +168,7 @@ ul.forumthreadposts li blockquote, div.inreplyto blockquote {margin:0 7px 10px 7
 .inreplyto .createdby  {font-size:0.9em;  border-bottom:1px dotted #ccc}
 a.editor, a.notable {font-style:italic}
 p.countdown {margin-left:10px}
-#blq-content .dna-boards p.dna-error {margin-left:10px; padding-left:15px; font-weight:bold; background:url(/dnaimages/dna_messageboard/img/complain.gif) no-repeat center left}
+#blq-content .dna-boards p.dna-error {margin-left:24px; padding:15px; font-weight:bold; background:url(/dnaimages/dna_messageboard/img/complain.gif) no-repeat center left}
 #blq-content .dna-moderation-wrap {background:url(/dnaimages/dna_messageboard/img/dna-mod-bottom-arrow.png) top right no-repeat}
 #blq-content .dna-moderation-wrap a {text-decoration:underline}
 #blq-content .dna-moderation-wrap p.dna-boards-moderation {padding-left:10px}
