added classes to user name for thread page so can editors/notables etc can be identified.

--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -147,6 +147,7 @@ ul.forumthreads p a.nosubject, ul.post-list p a.nosubject {font-style:italic; co
 ul.forumthreads li, ul.post-list li {padding:10px 0}
 ul.forumthreads li.stripe, ul.post-list li.stripe {background-color:#ebebed}
 ul.forumthreads li span.userid {display:none}
+table.forumthreads span.editor {font-style:italic}
 #blq-content.moreposts p, #blq-content.morecomments p, #blq-content.notfound p {margin:0 10px 5px 10px}
 #blq-content.moreposts p.morepostsintro {margin-bottom:20px}
 .noreplies {color:#bbb}
