--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -54,12 +54,12 @@ ul.admin {background-color:#e2e2e2}
 
 /* main content */
 #blq-content {float:left; margin:0 0 14px 14px}
-#blq-content.frontpage  {float:left; width:479px}
-#blq-content ul.dna-list-topic-col1, #blq-content ul.dna-list-topic-col2 {float:left; width:223px}
-#blq-content .topiclist li {position:relative; float:left; width:223px}
-#blq-content .single-col-topics li {width:463px; min-height:120px}
+#blq-content.frontpage  {float:left; width:515px}
+#blq-content ul.dna-list-topic-col1, #blq-content ul.dna-list-topic-col2 {float:left; width:233px}
+#blq-content .topiclist li {position:relative; float:left; width:241px}
+#blq-content .single-col-topics li {width:499px; min-height:120px}
 #blq-content .topiclistimage li {min-height:245px}
-#blq-main .inspect-user,#blq-main .threads, #blq-main .addthread, #blq-main .error, #blq-main .multiposts, #blq-main .moreposts, #blq-main .morecomments, #blq-main .move-thread  {width:463px; margin-right:14px; padding-bottom:10px; border-right:1px solid #ccc; border-bottom:1px solid #ccc; border-left:1px solid #ccc}
+#blq-main .inspect-user,#blq-main .threads, #blq-main .addthread, #blq-main .error, #blq-main .multiposts, #blq-main .moreposts, #blq-main .morecomments, #blq-main .move-thread  {width:499px; margin-right:14px; padding-bottom:10px; border-right:1px solid #ccc; border-bottom:1px solid #ccc; border-left:1px solid #ccc}
 #blq-main .addthread p.signin {padding:10px}
 .frontpage h2 {margin-right:14px}
 #blq-main #blq-content h2, #blq-main #dna-boardpromo h3 {padding:8px 10px; line-height:1em; font-size:1.4em; font-weight:normal; color:#fff; background-color:#376dad}
@@ -100,7 +100,7 @@ body.ie6 #blq-main #blq-content .pagination li {width:1px}
 #blq-content .topiclist li p {margin-top:5px; padding:0 10px; font-size:1.1em}
 #blq-content .topiclist li a:hover {text-decoration:none}
 
-#blq-content .topiclist li div.topicimage img {border:0}
+#blq-content .topiclist li div.topicimage img {border:0; padding: 0 10px}
 #blq-main .multiposts h3 {padding-left:10px; font-size:1.1em; color:#000}
 ul.forumthreadposts, p.forumthreadposts {clear:both}
 ul.forumthreadposts {margin-top:10px}
@@ -168,6 +168,7 @@ ul.forumthreadposts li blockquote, div.inreplyto blockquote {margin:0 7px 10px 7
 .inreplyto .itemdetail {margin:0 0 14px}
 .inreplyto .createdby  {font-size:0.9em;  border-bottom:1px dotted #ccc}
 a.editor, a.notable {font-style:italic}
+p#countdown {margin-left:10px}
 p.countdown {margin-left:10px}
 #blq-content .dna-boards p.dna-error {margin-left:24px; padding:15px; font-weight:bold; background:url(/dnaimages/dna_messageboard/img/complain.gif) no-repeat center left}
 #blq-content .dna-moderation-wrap {background:url(/dnaimages/dna_messageboard/img/dna-mod-bottom-arrow.png) top right no-repeat}
@@ -186,7 +187,7 @@ p.countdown {margin-left:10px}
 
 
 /* dna-boardpromo:about this board */
-#blq-main #dna-boardpromo {float:left; width:306px}
+#blq-main #dna-boardpromo {float:left; width:270px}
 #blq-main #dna-boardpromo div {margin-bottom:14px; border:1px solid #ccc}
 div#dna-boardpromo div p {padding:10px 9px}
 div#dna-boardpromo #dna-about-board {padding-bottom:10px; background-color:#f1f1f1; border:none}
@@ -278,3 +279,6 @@ div#logintrouble {float:right; width:auto; margin-right:10px; font-size:1.2em; c
 
 /* CLEAR HACKS */
 .forummodstatus:after {content:".";  display:block; height:0; clear:both; visibility:hidden}
+
+/* IE 6 */
+body.ie6 #blq-content .topiclist li div.topicimage img {border:0; padding: 0 5px}
