--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -73,7 +73,7 @@ ul.admin {background-color:#e2e2e2}
 #blq-main p.closed {padding:10px}
 
 /* pagination */
-#blq-main #blq-content .pagination {float:right; width:auto ;margin:5px 9px 10px 9px; clear:both}
+#blq-main #blq-content .pagination {float:right; width:auto;margin:5px 9px 10px 9px; clear:both;}
 #blq-main #blq-content .pagination li {float:left; width:auto; margin-right:1px; font-family:verdana,arial,helvetica,sans serif}
 body.ie6 #blq-main #blq-content .pagination li {width:1px}
 #blq-main #blq-content .pagination li a, #blq-main #blq-content .pagination li span {display:block; height:10px; margin:0 1px 0 0; padding:3px 5px 7px 5px; font-size:0.9em}
@@ -134,7 +134,8 @@ ul.forumthreadposts li.stripe {background-color:#edf0f1}
 #blq-content table.forumthreads td h3 {margin: 0;}
 #blq-content table.forumthreads .stripe td {background-color:#e2e7e9}
 #blq-content table.forumthreads .stickypin td {background-color:#d4e2e6}
-#blq-content a.backtotop {float:right;margin:10px;}
+#blq-content p.backtotop {width: 100%; text-align: right; padding:10px;}
+#blq-content p.backtotop a {padding-right: 20px;}
 
 #blq-content .post-list h4 {margin:0 10px; font-size:1.2em}
 #blq-main #blq-content .forumthreads h4 a:hover {text-decoration:none}
@@ -288,3 +289,5 @@ div#logintrouble {float:right; width:auto; margin-right:10px; font-size:1.2em; c
 
 /* IE 6 */
 body.ie6 #blq-content .topiclist li div.topicimage img {border:0; padding: 0 5px}
+body.ie6 #blq-content p.backtotop {width: 100%; text-align: right; padding:10px 0;}
+body.ie6 #blq-content p.backtotop a {padding-right: 10px;}
