--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -243,7 +243,8 @@ p.permalink {margin-top:15px;text-align:right}
 
 #blq-main #blq-content .dna-boards ul {margin:15px 0 10px 24px}
 #blq-main #blq-content .dna-boards ul li {float:left}
-#blq-main #blq-content .dna-boards input.dna-button, #blq-main #dna-searchform input.dna-button  {width:auto; overflow:visible; padding:2px 10px; color:#fff; font-size:0.9em; font-weight:bold; background-color:#376dad; -moz-border-radius:3px; -webkit-border-radius:3px; border:none}
+#blq-main #blq-content .dna-boards input.dna-button {width:auto; overflow:visible; padding:2px 10px; color:#fff; font-size:0.9em; font-weight:bold; background-color:#376dad; -moz-border-radius:3px; -webkit-border-radius:3px; border:none}
+#blq-main #dna-searchform input.dna-button {width:auto; overflow:visible; padding:2px 10px; color:#000; font-size:0.9em; background-color:#f1f1f1; -moz-border-radius:3px; -webkit-border-radius:3px; border:none}
 #blq-main #blq-content .dna-boards input.cancel {margin:0 200px 0 8px; background-color:#71aef1}
 .dna-boards p.preview {margin:10px 0 0 24px; padding:0 10px}
 #blq-main #blq-content .dna-boards div#previewpost {margin:10px 24px 0 24px; padding:10px; background-color:#e8eced}
