--- a/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
+++ b/Main/Source/ApacheAssets/dnaimages/dna_messageboard/style/generic_messageboard_v2.css
@@ -114,7 +114,7 @@ ul.forumthreadposts li p {margin-bottom:10px; font-size:1.1em}
 ul.forumthreadposts li.stripe {background-color:#edf0f1}
 #blq-content .forumthreads {clear: both; margin-top:10px; font-size:1.1em; color:#000;table-layout:fixed}
 #blq-content .forumthreads h3 {margin:0 10px; padding:0; font-size:1em}
-#blq-content .numDiscussions {padding: 0 0 5px 9px;clear:both}
+#blq-content .numDiscussions {padding: 0 0 5px 9px;clear:both;position:absolute;left:-9999px}
 #blq-content table.forumthreads a {text-decoration:none}
 #blq-content table.forumthreads a:hover {text-decoration:underline}
 #blq-content table.forumthreads tr.stickypin {border:1px solid #a5a5a5}
